# app/Http/Requests/RegistrationRequest.php
@@ -25,7 +25,6 @@ class RegistrationRequest extends FormRequest
     public function rules(): array
     {
         return [
-            'username' => ['required', 'string'],
             'email' => ['required', 'email'],
             'password' => [
                 'required',
