# app/Http/Requests/StoreProductRequest.php
@@ -2,7 +2,9 @@
 
 namespace App\Http\Requests;
 
+use Illuminate\Contracts\Validation\Validator;
 use Illuminate\Foundation\Http\FormRequest;
+use Illuminate\Http\Exceptions\HttpResponseException;
 
 class StoreProductRequest extends FormRequest
 {
@@ -11,7 +13,8 @@ class StoreProductRequest extends FormRequest
      */
     public function authorize(): bool
     {
-        return true; // TODO: Only Admins
+//        return auth()->role == 'admin'; // TODO: Only Admins
+        return true;
     }
 
     /**
@@ -23,9 +26,33 @@ class StoreProductRequest extends FormRequest
     {
         return [
             "name" => ['required', "string"],
-            "price" => ['required', 'numeric'],
-            "currency" => ['string'],
-            "image_path" => ['required' , "unique:products,image_path"]
+            'description' => ['required', 'min:10'],
+            "price" => ['required', 'numeric'], // TODO: Refactor later
+            "currency" => ['string', 'max:3'],
+            "image_path" => ['required'], // TODO: Refactor later
+            "image_name" => ['required_with:image_path' , "unique:products,image_name"], // TODO: Refactor later
+
+            'brand_id'=>'exists:brands,id',
+            'category_id'=>'exists:categories,id',
+            'discount_id' => 'exists:discounts,id',
+
+            'sub_category_ids' => ['array', 'exists:sub_categories,id'],
+            'group_ids' => ['array','exists:groups,id'],
+
+            'attributes' => ['array']
         ];
     }
+
+    protected function failedValidation(Validator $validator)
+    {
+        throw new HttpResponseException(response([
+            'message' => 'Validation failed',
+            'errors' => $validator->errors()->all(),
+            'code' => 422
+        ], 422)
+        );
+
+    }
+
+
 }
